# Mu

./: .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.ts  bunfig.toml  command-palette.html  package.json  sidebar.html  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.gsd/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default_filters.txt
src-tauri/src/: events.rs  lib.rs  main.rs  settings.rs  state.rs  utils.rs
src-tauri/src/adblocker/: filter_engine.rs  filter_engine_props.rs  filter_engine_test.rs  mod.rs  state.rs  state_props.rs  state_test.rs  types.rs
src-tauri/src/bookmarks/: db.rs  mod.rs  types.rs
src-tauri/src/commands/: adblocker.rs  bookmarks.rs  dialog.rs  mod.rs  navigation.rs  settings_cmd.rs  shortcuts.rs  tabs.rs  toast.rs  webview.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/command_palette/: commands.rs  mod.rs  models.rs
src-tauri/src/modules/navigation/: commands.rs  mod.rs  models.rs
src-tauri/src/modules/sidebar/: commands.rs  mod.rs  models.rs
src-tauri/src/modules/tabs/: commands.rs  models.rs
src-tauri/src/modules/webview/: commands.rs  mod.rs  models.rs
src-tauri/src/settings/: db.rs  mod.rs  types.rs
src-tauri/src/setup/: content_shortcuts.js  mod.rs  state_init.rs  webviews.rs  window.rs
src-tauri/src/shortcuts/: actions.rs  defaults.rs  mod.rs  platform.rs  register.rs  types.rs
(+164 files in other folders)
