[package]
name = "mu"
version = "0.1.0"
description = "Mu"
authors = ["Ubsa"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.9.4", features = ["unstable"] }
tauri-plugin-log = "2.7.1"
